k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rubik-go
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: rubik-go.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rubik-go
            port:
              number: 80
